# ReservoirController

./: .gitignore  CMakeLists.txt  Readme.md  platformio.ini  sdkconfig.esp32doit-devkit-v1
doc/: architecture.xopp
simulation/: CMakeLists.txt  Readme.md  run.sh
simulation/lib/imgui/: CMakeLists.txt
simulation/src/: CMakeLists.txt  app.cpp  app.hpp  app_base.cpp  app_base.hpp  do_timer.hpp  dt_timer.hpp  main.cpp  relative_clock.hpp  reservoir.cpp  reservoir.hpp  scaled_clock.hpp  simulation.cpp  simulation.hpp
simulation/src/driver/: ec_sensor.hpp  liquid_level_sensor.hpp  ph_sensor.hpp  valve.hpp
simulation/src/imgui/: CMakeLists.txt
simulation/test/: CMakeLists.txt  test_main.cpp
src/: CMakeLists.txt  app.cpp  app.hpp  config.hpp  controller.hpp  cultimatic.hpp  main.cpp  pin_config.hpp
src/core/: Readme.md  actuators.hpp  common.hpp  controller.hpp  controller_config.hpp  controller_manager.hpp  doser.hpp  doser_manager.hpp  dosing_pump.hpp  dt_timer.hpp  duration.hpp  ec_controller.hpp  liquid_level_controller.hpp  ph_controller.hpp  pid.cpp  pid.hpp  sensors.hpp
src/driver/: Readme.md  ReservoirController.code-workspace  button.hpp  dfrobot_ph_sensor_v2.hpp  drfobot_ph_sensor_v2.cpp  ec_sensor.cpp  ec_sensor.hpp  liquid_level_sensor.cpp  liquid_level_sensor.hpp  read_voltage.cpp  read_voltage.hpp  tb6612fng_valve.cpp  tb6612fng_valve.hpp  valve.cpp  valve.hpp
src/drivers/: AnalogSensor.cpp  AnalogSensor.h  DigitalSensor.cpp  DigitalSensor.h  Readme.md  dfrobot_ph_sensor_v2.hpp  drfobot_ph_sensor_v2.cpp  ec_sensor.cpp  ec_sensor.hpp  liquid_level_sensor.cpp  liquid_level_sensor.hpp  read_voltage.hpp  solenoid_valve.cpp  solenoid_valve.hpp  tb6612fng_valve.hpp
src/ec/: ec_controller.hpp
src/liquid_level/: liquid_level_controller.hpp
src/net/: JsonRpc.cpp  JsonRpc.h  serialize.cpp  serialize.hpp
src/ph/: ph_controller.hpp
src/platform/: Readme.md
src/platform/proto/: dfrobot_ph_sensor_v2.hpp  dosing_pump.hpp  drfobot_ph_sensor_v2.cpp  ec_sensor.cpp  ec_sensor.hpp  liquid_level_sensor.cpp  liquid_level_sensor.hpp  tb6612fng_pump.hpp  valve.cpp  valve.hpp
test/: test_dt_timer.hpp  test_main.cpp  test_pid.hpp
